/*
  export PATH="$PATH:$(go env GOPATH)/bin"
  protoc --proto_path=/usr/local/include/:. --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative  shop.proto
*/

syntax = "proto3";

package users;
option go_package = "github.com/TranXuanPhong25/ecom/services/shops/proto";

service ShopsService {
  rpc GetShopsByIDs(GetShopsByIDsRequest) returns (GetShopsByIDsResponse);
}

message GetShopsByIDsRequest {
  repeated string ids = 1;
}

// Define the response message
message Shop {
  string id = 1;
  string name = 2;
}

message GetShopsByIDsResponse {
  repeated Shop shops = 1;
  repeated string not_found_ids = 2;
}
